// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render correctly with all the default props 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render flat variant properly  1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 0px;
  margin: 0px;
  border: none;
  box-shadow: none;
  background-color: transparent;
}

.c0.c0 * {
  background-color: transparent;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when flow direction is horizontal and separator is set true 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c7:hover.c0:hover * {
  color: #ffffff;
  background-color: #FE8D6B;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 > div + div {
  border-left: 1px solid #7C7B7B;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 > div + div {
  border-left: 1px solid #7C7B7B;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c4 > div + div {
  border-left: 1px solid #7C7B7B;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c5 > div + div {
  border-left: 1px solid #7C7B7B;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c6 > div + div {
  border-left: 1px solid #7C7B7B;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c0 c2"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c4"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c5"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c6"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c1"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render properly when fullWidth and fullHeight is set true 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c3:hover.c0:hover * {
  color: #ffffff;
  background-color: #FE8D6B;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  width: calc(100% - 10px);
  height: calc(100% - 10px);
}

<div>
  <div
    class="c0 c1"
  >
    <span
      class="c2"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when it is clickable  1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  cursor: pointer;
}

.c1:hover {
  border-color: #FE8D6B;
  background-color: #FE8D6B;
}

.c1:hover.c0:hover * {
  color: #ffffff;
  background-color: #FE8D6B;
}

.c1:active {
  box-shadow: none;
}

<div>
  <div
    class="c0 c1"
  >
    <span
      class="c2"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when separator is set true flow direction is vertical 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 0px;
  margin: 0px;
  border: none;
  box-shadow: none;
  background-color: transparent;
}

.c2.c2 * {
  background-color: transparent;
}

.c7:hover.c0:hover * {
  color: #ffffff;
  background-color: #FE8D6B;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 > div + div {
  border-top: 1px solid #7C7B7B;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 0px;
  margin: 0px;
  border: none;
  box-shadow: none;
  background-color: transparent;
}

.c4.c4 * {
  background-color: transparent;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 0px;
  margin: 0px;
  border: none;
  box-shadow: none;
  background-color: transparent;
}

.c5.c5 * {
  background-color: transparent;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 0px;
  margin: 0px;
  border: none;
  box-shadow: none;
  background-color: transparent;
}

.c6.c6 * {
  background-color: transparent;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c0 c2"
    >
      <span
        class="c3"
      >
        Marks
      </span>
    </div>
    <div
      class="c0 c4"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c5"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0 c6"
    >
      <span
        class="c3"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render solid variant properly  1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin: 5px;
  overflow: auto;
  box-sizing: border-box;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #F9F9F9;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-color: #FE8D6B;
  background-color: #FE8D6B;
}

.c0.c0 * {
  color: #ffffff;
  background-color: #FE8D6B;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;
